--- a/Main/src/main/resources/view/tictactoe.fxml
+++ b/Main/src/main/resources/view/tictactoe.fxml
@@ -4,141 +4,181 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.effect.InnerShadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.geometry.Insets?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="549.0" prefWidth="623.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.tictactoe.service.Controller.BoardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="650.0" style="-fx-background-color: #1e1e2f;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.tictactoe.service.Controller.BoardController">
    <children>
-      <Pane layoutX="88.0" layoutY="13.0" prefHeight="70.0" prefWidth="454.0" style="-fx-background-color: #8e44ad; -fx-background-radius: 21;">
+      <VBox alignment="TOP_CENTER" layoutX="0.0" layoutY="0.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <padding>
+            <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+         </padding>
          <children>
-            <Label layoutX="170.0" layoutY="11.0" prefHeight="48.0" prefWidth="160.0" text="Tic Tac Toe " textFill="#1b0202">
-               <font>
-                  <Font name="Constantia Bold" size="28.0" />
-               </font>
-            </Label>
-            <ImageView fx:id="image" fitHeight="81.0" fitWidth="60.0" layoutX="96.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../Pictures/TicTacToe/istockphoto-2213330981-612x612.jpg" />
-               </image>
-            </ImageView>
-         </children>
-         <effect>
-            <InnerShadow />
-         </effect>
-      </Pane>
-      <Pane layoutX="31.0" layoutY="102.0" prefHeight="422.0" prefWidth="569.0" style="-fx-background-color: gray; -fx-background-radius: 3;">
-         <effect>
-            <InnerShadow />
-         </effect>
-         <children>
-            <GridPane layoutX="112.0" layoutY="30.0" prefHeight="300.0" prefWidth="330.0" style="-fx-background-color: gray; -fx-border-color: black; -fx-border-width: 3px;">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <!-- Header -->
+            <HBox alignment="CENTER" spacing="15.0" style="-fx-background-color: #2c2c44; -fx-background-radius: 15;">
+               <padding>
+                  <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
+               </padding>
+               <effect>
+                  <DropShadow color="#00000080" height="15.0" radius="7.0" width="15.0" />
+               </effect>
                <children>
-                  <Button fx:id="one" mnemonicParsing="false" onAction="#buttonAction" prefHeight="98.0" prefWidth="145.0" style="-fx-border-color: black; -fx-border-radius: 4;" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="0">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                     <effect>
-                        <DropShadow />
-                     </effect>
+                  <Label text="TIC TAC TOE" textFill="#e9e9e9">
                      <font>
-                        <Font name="Consolas Bold" size="25.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="two" layoutX="20.0" layoutY="20.0" mnemonicParsing="false" onAction="#buttonAction" prefHeight="98.0" prefWidth="145.0" style="-fx-border-color: black; -fx-border-radius: 4;" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="0">
-                     <font>
-                        <Font name="Consolas Bold" size="25.0" />
+                        <Font name="Montserrat Bold" size="28.0" />
                      </font>
                      <effect>
-                        <DropShadow />
+                        <DropShadow color="#5b34eb" height="8.0" radius="3.5" width="8.0" />
                      </effect>
-                  </Button>
-                  <Button fx:id="three" layoutX="110.0" layoutY="20.0" mnemonicParsing="false" onAction="#buttonAction" prefHeight="98.0" prefWidth="145.0" style="-fx-border-color: black; -fx-border-radius: 4;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="0">
-                     <font>
-                        <Font name="Consolas Bold" size="25.0" />
-                     </font>
-                     <effect>
-                        <DropShadow />
-                     </effect>
-                  </Button>
-                  <Button fx:id="four" layoutX="210.0" layoutY="20.0" mnemonicParsing="false" onAction="#buttonAction" prefHeight="98.0" prefWidth="145.0" style="-fx-border-color: black; -fx-border-radius: 4;" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="1">
-                     <font>
-                        <Font name="Consolas Bold" size="25.0" />
-                     </font>
-                     <effect>
-                        <DropShadow />
-                     </effect>
-                  </Button>
-                  <Button fx:id="five" layoutX="10.0" layoutY="120.0" mnemonicParsing="false" onAction="#buttonAction" prefHeight="98.0" prefWidth="145.0" style="-fx-border-color: black; -fx-border-radius: 4;" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
-                     <font>
-                        <Font name="Consolas Bold" size="25.0" />
-                     </font>
-                     <effect>
-                        <DropShadow />
-                     </effect>
-                  </Button>
-                  <Button fx:id="six" layoutX="110.0" layoutY="120.0" mnemonicParsing="false" onAction="#buttonAction" prefHeight="98.0" prefWidth="145.0" style="-fx-border-color: black; -fx-border-radius: 4;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
-                     <font>
-                        <Font name="Consolas Bold" size="25.0" />
-                     </font>
-                     <effect>
-                        <DropShadow />
-                     </effect>
-                  </Button>
-                  <Button fx:id="seven" layoutX="210.0" layoutY="120.0" mnemonicParsing="false" onAction="#buttonAction" prefHeight="98.0" prefWidth="145.0" style="-fx-border-color: black; -fx-border-radius: 4;" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="2">
-                     <font>
-                        <Font name="Consolas Bold" size="25.0" />
-                     </font>
-                     <effect>
-                        <DropShadow />
-                     </effect>
-                  </Button>
-                  <Button fx:id="eight" layoutX="10.0" layoutY="220.0" mnemonicParsing="false" onAction="#buttonAction" prefHeight="98.0" prefWidth="145.0" style="-fx-border-color: black; -fx-border-radius: 4;" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
-                     <font>
-                        <Font name="Consolas Bold" size="25.0" />
-                     </font>
-                     <effect>
-                        <DropShadow />
-                     </effect>
-                  </Button>
-                  <Button fx:id="nine" layoutX="110.0" layoutY="220.0" mnemonicParsing="false" onAction="#buttonAction" prefHeight="98.0" prefWidth="108.0" style="-fx-border-color: black; -fx-border-radius: 4;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
-                     <font>
-                        <Font name="Consolas Bold" size="25.0" />
-                     </font>
-                     <effect>
-                        <DropShadow />
-                     </effect>
-                  </Button>
+                  </Label>
                </children>
+            </HBox>
+
+            <!-- Game Board -->
+            <StackPane style="-fx-background-color: #2c2c44; -fx-background-radius: 15;">
+               <padding>
+                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+               </padding>
                <effect>
-                  <InnerShadow />
+                  <DropShadow color="#00000080" height="15.0" radius="7.0" width="15.0" />
                </effect>
-            </GridPane>
-            <Button fx:id="b1" layoutX="180.0" layoutY="360.0" mnemonicParsing="false" onAction="#ButtonAction" prefHeight="31.0" prefWidth="173.0" style="-fx-background-color: #8e44ad;" text="Play Again" textFill="WHITE">
+               <children>
+                  <GridPane hgap="12.0" maxHeight="380.0" maxWidth="380.0" prefHeight="380.0" prefWidth="380.0" style="-fx-background-color: #2c2c44;" vgap="12.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <Button fx:id="one" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buttonAction" style="-fx-background-color: #3c3c5c; -fx-background-radius: 10;" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <effect>
+                              <DropShadow color="#00000066" height="8.0" radius="3.5" width="8.0" />
+                           </effect>
+                           <font>
+                              <Font name="Montserrat Bold" size="30.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="two" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buttonAction" style="-fx-background-color: #3c3c5c; -fx-background-radius: 10;" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                           <font>
+                              <Font name="Montserrat Bold" size="30.0" />
+                           </font>
+                           <effect>
+                              <DropShadow color="#00000066" height="8.0" radius="3.5" width="8.0" />
+                           </effect>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <Button fx:id="three" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buttonAction" style="-fx-background-color: #3c3c5c; -fx-background-radius: 10;" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="0">
+                           <font>
+                              <Font name="Montserrat Bold" size="30.0" />
+                           </font>
+                           <effect>
+                              <DropShadow color="#00000066" height="8.0" radius="3.5" width="8.0" />
+                           </effect>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <Button fx:id="four" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buttonAction" style="-fx-background-color: #3c3c5c; -fx-background-radius: 10;" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                           <font>
+                              <Font name="Montserrat Bold" size="30.0" />
+                           </font>
+                           <effect>
+                              <DropShadow color="#00000066" height="8.0" radius="3.5" width="8.0" />
+                           </effect>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <Button fx:id="five" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buttonAction" style="-fx-background-color: #3c3c5c; -fx-background-radius: 10;" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <font>
+                              <Font name="Montserrat Bold" size="30.0" />
+                           </font>
+                           <effect>
+                              <DropShadow color="#00000066" height="8.0" radius="3.5" width="8.0" />
+                           </effect>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <Button fx:id="six" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buttonAction" style="-fx-background-color: #3c3c5c; -fx-background-radius: 10;" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                           <font>
+                              <Font name="Montserrat Bold" size="30.0" />
+                           </font>
+                           <effect>
+                              <DropShadow color="#00000066" height="8.0" radius="3.5" width="8.0" />
+                           </effect>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <Button fx:id="seven" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buttonAction" style="-fx-background-color: #3c3c5c; -fx-background-radius: 10;" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="Montserrat Bold" size="30.0" />
+                           </font>
+                           <effect>
+                              <DropShadow color="#00000066" height="8.0" radius="3.5" width="8.0" />
+                           </effect>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <Button fx:id="eight" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buttonAction" style="-fx-background-color: #3c3c5c; -fx-background-radius: 10;" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="Montserrat Bold" size="30.0" />
+                           </font>
+                           <effect>
+                              <DropShadow color="#00000066" height="8.0" radius="3.5" width="8.0" />
+                           </effect>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <Button fx:id="nine" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buttonAction" style="-fx-background-color: #3c3c5c; -fx-background-radius: 10;" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="Montserrat Bold" size="30.0" />
+                           </font>
+                           <effect>
+                              <DropShadow color="#00000066" height="8.0" radius="3.5" width="8.0" />
+                           </effect>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                     </children>
+                  </GridPane>
+               </children>
+            </StackPane>
+
+            <!-- Action Button -->
+            <Button fx:id="b1" mnemonicParsing="false" onAction="#ButtonAction" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #6c5ce7; -fx-background-radius: 25; -fx-cursor: hand;" text="PLAY AGAIN" textFill="WHITE">
                <font>
-                  <Font name="Georgia Bold" size="20.0" />
+                  <Font name="Montserrat Bold" size="16.0" />
                </font>
                <effect>
-                  <DropShadow />
+                  <DropShadow color="#6c5ce780" height="15.0" radius="7.0" width="15.0" />
                </effect>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
          </children>
-      </Pane>
+      </VBox>
    </children>
 </AnchorPane>
