--- a/Main/src/main/resources/view/tictactoe.fxml
+++ b/Main/src/main/resources/view/tictactoe.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,9 +13,8 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.geometry.Insets?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="650.0" style="-fx-background-color: #1e1e2f;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.tictactoe.service.Controller.BoardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="650.0" style="-fx-background-color: #1e1e2f;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.tictactoe.service.Controller.BoardController">
    <children>
       <VBox alignment="TOP_CENTER" layoutX="0.0" layoutY="0.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <padding>
@@ -30,9 +30,17 @@
                   <DropShadow color="#00000080" height="15.0" radius="7.0" width="15.0" />
                </effect>
                <children>
-                  <Label text="TIC TAC TOE" textFill="#e9e9e9">
+                  <Label prefHeight="32.0" prefWidth="174.0" text="WELCOME" textFill="#e9e9e9">
                      <font>
-                        <Font name="Montserrat Bold" size="28.0" />
+                        <Font name="Georgia Bold" size="28.0" />
+                     </font>
+                     <effect>
+                        <DropShadow color="#5b34eb" height="8.0" radius="3.5" width="8.0" />
+                     </effect>
+                  </Label>
+                  <Label fx:id="userName" layoutX="224.0" layoutY="25.0" prefHeight="32.0" prefWidth="139.0" textFill="#e9e9e9">
+                     <font>
+                        <Font name="Georgia Bold" size="28.0" />
                      </font>
                      <effect>
                         <DropShadow color="#5b34eb" height="8.0" radius="3.5" width="8.0" />
@@ -167,9 +175,9 @@
             </StackPane>
 
             <!-- Action Button -->
-            <Button fx:id="b1" mnemonicParsing="false" onAction="#ButtonAction" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #6c5ce7; -fx-background-radius: 25; -fx-cursor: hand;" text="PLAY AGAIN" textFill="WHITE">
+            <Button fx:id="b1" mnemonicParsing="false" onAction="#ButtonAction" prefHeight="78.0" prefWidth="190.0" style="-fx-background-color: #6c5ce7; -fx-background-radius: 25; -fx-cursor: hand;" text="PLAY AGAIN" textFill="WHITE">
                <font>
-                  <Font name="Montserrat Bold" size="16.0" />
+                  <Font name="Georgia" size="16.0" />
                </font>
                <effect>
                   <DropShadow color="#6c5ce780" height="15.0" radius="7.0" width="15.0" />
